--- a/css/main.css
+++ b/css/main.css
@@ -330,3 +330,15 @@ code {
     box-shadow: none;
   }
 }
+
+
+footer.page-footer {
+    margin-top: 20px;
+    padding-top: 20px;
+    background-color: #423b3b;
+}
+
+
+.white-text {
+    color: #FFFFFF !important;
+}
