复制了几篇rmarkdown的模板，显示在我的网站上

--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,15 @@ code {
   position: relative;
 }
 
+.caption {
+  color: blue;
+  text-align: center;
+}
+
+.figure {
+  text-align: center;
+}
+
 .header {
   padding: 20px 0;
   position: relative;
