--- a/categories/template/index.html
+++ b/categories/template/index.html
@@ -60,7 +60,7 @@
     <h2 class="archive-title">2017</h2>
     
     <article class="archive-item">
-      <a href="/2017/12/15/template-of-rmarkdown/" class="archive-item-link">&lt;引用&gt;Rmarkdown模板</a>
+      <a href="/2017/12/15/template-of-rmarkdown/" class="archive-item-link">Rmarkdown模板</a>
       <span class="archive-item-date">
         2017/12/15
       </span>
