--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,19 @@ img{
 }
 
 
+table {
+    display: table;
+    border-collapse: separate;
+    border-spacing: 2px;
+    border-color: grey;
+    margin-left: auto; 
+    margin-right: auto; 
+}
+
+
+
+
+
 a {
   outline: none;
 }
@@ -107,12 +120,16 @@ code {
 }
 
 .content {
-  max-width: 700px;
+  max-width: 800px;
   margin: 40px auto 10px;
   padding: 0 15px;
   font-size: 16px;
   line-height: 1.7;
   color: #333;
+}
+
+article {
+  margin: 0 15px;
 }
 
 .article-title {
@@ -341,13 +358,5 @@ code {
 }
 
 
-footer.page-footer {
-    margin-top: 20px;
-    padding-top: 20px;
-    background-color: #423b3b;
-}
 
 
-.white-text {
-    color: #FFFFFF !important;
-}
