--- a/css/main.css
+++ b/css/main.css
@@ -27,11 +27,6 @@ img{
     height:auto;
 }
 
-table {
-  margin-left: auto;
-  margin-right:auto;
-}
-
 
 a {
   outline: none;
@@ -112,7 +107,7 @@ code {
 }
 
 .content {
-  max-width: 705px;
+  max-width: 700px;
   margin: 40px auto 10px;
   padding: 0 15px;
   font-size: 16px;
@@ -346,3 +341,13 @@ code {
 }
 
 
+footer.page-footer {
+    margin-top: 20px;
+    padding-top: 20px;
+    background-color: #423b3b;
+}
+
+
+.white-text {
+    color: #FFFFFF !important;
+}
