--- a/categories/template/index.html
+++ b/categories/template/index.html
@@ -8,6 +8,7 @@
 
 <title>Template - ReadAILib Official Website </title>
 <meta property="og:title" content="Template - ReadAILib Official Website ">
+<meta property="og:author" content="Template - {        map[]}">
 
 
 
