--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,9 @@ img{
 
 a {
   outline: none;
+  color: #0076df;
+  text-decoration: none;
+
 }
 
 code {
@@ -45,6 +48,83 @@ code {
     color: #7a7a7a;
     font-style: italic;
 }
+
+.generic-box {
+    text-align: center;
+    border: 1px solid #eee;
+    padding: 10px;
+    background: #f9f9f9;
+    margin: 30px;
+}
+
+
+
+table {
+  /*left-margin: auto;*/
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+
+
+/*font size*/
+/*@media screen and (min-width: 32em)*/
+
+/*h1, .h1 {
+    font-size: 1.8rem;
+}
+h2, .h2 {
+    font-size: 1.4rem;
+}*/
+/*
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Lato","Helvetica Neue",Helvetica,sans-serif;
+    font-weight: 900;
+    line-height: 1.25;
+    margin-top: 1em;
+    margin-bottom: .5em;
+}
+*/
+
+
+
+/*@media screen and (min-width: 32em)*/
+blockquote {
+    margin-left: 2rem;
+    padding: 2rem;
+}
+
+blockquote {
+    font-size: 12pt;
+    background: #f9f9f9;
+    border-left: 10px solid #ccc;
+    margin: 1em 5px;
+}
+
+blockquote, blockquote p {
+    font-size: .9rem;
+    font-style: italic;
+    text-align: justify;
+}
+
+
+/*math */
+
+.MathJax_Display {
+    text-align: center;
+    margin: 1em 0em;
+    position: relative;
+    display: block!important;
+    text-indent: 0;
+    max-width: none;
+    max-height: none;
+    min-width: 0;
+    min-height: 0;
+    width: 100%;
+}
+
+/**/
 
 .wrapper {
   overflow: hidden;
@@ -152,13 +232,18 @@ code {
 }
 
 .article-content a {
-  text-decoration: none;
+  /*text-decoration: none;
   color: inherit;
   border-bottom: 3px solid #CBF8DF;
   box-shadow: inset 0 -4px 0 #CBF8DF;
   background: transparent;
-  transition: background 150ms ease;
+  transition: background 150ms ease;*/
+  outline: none;
+  color: #0076df;
+  text-decoration: none;
 }
+
+
 
 .article-content a:hover,
 .article-content a:focus {
