--- a/css/main.css
+++ b/css/main.css
@@ -57,9 +57,9 @@ code {
     /*margin: 30px;*/
 }
 
-.gt-container {
+/*.gt-container {
   margin: 5px;
-}
+}*/
 
 table {
   /*left-margin: auto;*/
