--- a/css/main.css
+++ b/css/main.css
@@ -73,21 +73,21 @@ table {
 /*font size*/
 /*@media screen and (min-width: 32em)*/
 
-/*h1, .h1 {
+h1, .h1 {
     font-size: 1.8rem;
 }
 h2, .h2 {
     font-size: 1.4rem;
-}*/
-/*
+}
+
 h1, h2, h3, h4, h5, h6 {
-    font-family: "Lato","Helvetica Neue",Helvetica,sans-serif;
+    font-family:  "华文细黑","Lato","Helvetica Neue",Helvetica,sans-serif;
     font-weight: 900;
     line-height: 1.25;
     margin-top: 1em;
     margin-bottom: .5em;
 }
-*/
+
 
 
 
