--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,16 @@ body {
   margin: 0;
   padding: 0;
   position: relative;
+
+  background-color: #f5f5d5;
+  /*font-family: Georgia, serif;*/
+/*  letter-spacing: -0.01em;
+  word-spacing: 0.2em;
+  line-height: 1.8em;
+  font-size: 62.5%;
+  color: #111111;
+*/  /*width: 98%;*/
+
 }
 
 body {
@@ -81,7 +91,7 @@ h2, .h2 {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family:  "华文细黑","Lato","Helvetica Neue",Helvetica,sans-serif;
+    font-family: "Lato","Helvetica Neue",Helvetica, "华文细黑",sans-serif;
     font-weight: 900;
     line-height: 1.25;
     margin-top: 1em;
@@ -98,6 +108,7 @@ blockquote {
 }
 
 blockquote {
+  background-color: #f5f2f0;
     font-size: 12pt;
     background: #f9f9f9;
     border-left: 10px solid #ccc;
@@ -105,7 +116,7 @@ blockquote {
 }
 
 blockquote, blockquote p {
-    font-size: .9rem;
+    font-size: 0.9rem;
     font-style: italic;
     text-align: justify;
 }
@@ -145,7 +156,8 @@ blockquote, blockquote p {
 .header {
   padding: 20px 0;
   position: relative;
-  background: #f5f5f5;
+  background: #f5f5d5;
+
   border-bottom: 1px solid #eaeaea;
 }
 
