--- a/css/main.css
+++ b/css/main.css
@@ -3,16 +3,6 @@ body {
   margin: 0;
   padding: 0;
   position: relative;
-
-  background-color: #f5f5d5;
-  /*font-family: Georgia, serif;*/
-/*  letter-spacing: -0.01em;
-  word-spacing: 0.2em;
-  line-height: 1.8em;
-  font-size: 62.5%;
-  color: #111111;
-*/  /*width: 98%;*/
-
 }
 
 body {
@@ -108,7 +98,6 @@ blockquote {
 }
 
 blockquote {
-  background-color: #f5f2f0;
     font-size: 12pt;
     background: #f9f9f9;
     border-left: 10px solid #ccc;
@@ -116,7 +105,7 @@ blockquote {
 }
 
 blockquote, blockquote p {
-    font-size: 0.9rem;
+    font-size: .9rem;
     font-style: italic;
     text-align: justify;
 }
@@ -156,8 +145,7 @@ blockquote, blockquote p {
 .header {
   padding: 20px 0;
   position: relative;
-  background: #f5f5d5;
-
+  background: #f5f5f5;
   border-bottom: 1px solid #eaeaea;
 }
 
