--- a/css/main.css
+++ b/css/main.css
@@ -172,11 +172,11 @@ blockquote footer {
  
 
 .gt-container .gt-comment-admin .gt-header-comment .gt-comment-content {
-    background: #f5f3d5;
+    background-color: #f5f3d5;
 }
 
 textarea {
-   background: #f5f3d5;
+   background-color: #f5f3d5;
 }
 /**/
 .nav {
