--- a/css/main.css
+++ b/css/main.css
@@ -166,7 +166,7 @@ blockquote footer {
     overflow-x: auto;
     padding: 0.5em;
     color: #333;
-    background: #f5f3d5; /*#f8f8f8#f5f2d5*/
+    background: #f8f8f8; /*#f8f8f8#f5f2d5*/
 }
 
  
