--- a/css/main.css
+++ b/css/main.css
@@ -160,11 +160,17 @@ blockquote, blockquote p {
   text-align: center;
 }
 
+
+
 .header {
   padding: 20px 0;
+  width: 100%;
   position: relative;
   background: #f3f5d5;  /*#f5f5f5;*/
   border-bottom: 1px solid #eaeaea;
+  /*position:fixed;*/
+  /*top:0;*/
+  /*z-index: 999;*/
 }
 
 blockquote footer {
@@ -199,6 +205,7 @@ textarea {
   margin: 0 auto;
   padding: 0 15px;
   text-align: right;
+
 }
 
 .nav-logo {
@@ -246,6 +253,7 @@ textarea {
 .content {
   max-width: 700px;
   margin: 40px auto 10px;
+  /*margin: 140px auto 10px;*/
   padding: 0 15px;
   font-size: 16px;
   line-height: 1.7;
